HTMLSettings security Fix some bugs related to HTMLSettings web view

--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -260,7 +260,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="location_btn" type="submit"
-                                                                class="btn bg-blue btn-block" onclick="sendTo()" >Change Location
+                                                                class="btn bg-blue btn-block" onclick='sendTo("new_location")' >Change Location
                                                         </button>
                                                     </div>
                                                 </div>
@@ -283,7 +283,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="location_description_btn" type="submit"
-                                                                class="btn bg-blue btn-block" onclick="sendTo()">Change Location
+                                                                class="btn bg-blue btn-block" onclick='sendTo("new_location_description")'>Change Location
                                                             Description
                                                         </button>
                                                     </div>
@@ -307,7 +307,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="background_btn" type="submit"
-                                                                class="btn bg-blue btn-block" onclick="sendTo()">Change Background
+                                                                class="btn bg-blue btn-block" onclick='sendTo("new_background")'>Change Background
                                                         </button>
                                                     </div>
                                                 </div>
